--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
         <h3>Esto es un subtitulo</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam reprehenderit dolore aut vel cupiditate asperiores dolorum aliquid quidem fugiat pariatur possimus consequatur similique, perspiciatis deserunt ratione impedit itaque ea quia?</p>
     </main>
+
+    <footer>
+        <p>Esto es un footer</p>
+    </footer>
 </body>
 </html>
